fixed the alignment with table and map headings

--- a/client/src/components/table.css
+++ b/client/src/components/table.css
@@ -1,3 +1,8 @@
 th{
     text-align: center;
+    color: white;
+}
+
+thead{
+    background-color: #2A93FC;
 }
